# spacxt

./: .gitignore  README.md  pyproject.toml
docs/: APARTMENT_IMPROVEMENTS.md  LAYOUT_IMPROVEMENTS.md  README.md  README_complex_apartment.md  STRUCTURAL_FIXES.md  UUID_STRUCTURE.md  api-reference.md  applications.md  arch.excalidraw  arch.md  arch.mmd  arch_overview.excalidraw  arch_overview.mmd  architecture.md  examples.md  getting-started.md  llm-setup.md  overview.md  spatial-context-qa.md
examples/: apartment_gui_simple.py  apartment_matplotlib_demo.py  apartment_matplotlib_export.json  bootstrap.json  complex_apartment.json  complex_apartment_demo.py  complex_apartment_gui.py  complex_apartment_negotiated.json  demo.py  demo_gui.py  demo_without_llm.py  spatial_qa_demo.py
scripts/: 3dsg_parser.py
src/spacxt/: __init__.py
src/spacxt/core/: __init__.py  agents.py  graph_store.py  orchestrator.py
src/spacxt/gui/: __init__.py  visualizer.py
src/spacxt/nlp/: __init__.py  llm_client.py  llm_parser.py  parser.py  scene_modifier.py  spatial_qa.py
src/spacxt/physics/: __init__.py  collision_detector.py  physics_utils.py  placement_engine.py  support_system.py
src/spacxt/protocols/: __init__.py  a2a_protocol.py
src/spacxt/tools/: __init__.py  topo_tool.py
web/: OVERVIEW.md  README.md  start-all.sh  stop-all.sh
web/backend/: main.py  start.sh
web/frontend/: index.html  package-lock.json  package.json  start.sh
web/frontend/src/: index.css
web/frontend/src/components/: App.tsx  GraphView2D.tsx  GraphView3D.tsx  Scene3D.tsx
web/frontend/src/hooks/: useWebSocket.ts
web/frontend/src/services/: api.ts
web/frontend/src/types/: spatial.ts
