[tool.poetry]
name = "spacxt"
version = "0.1.0"
description = "Spatial Context Engine with Agentized Objects - A 3D Scene Graph with agent-based spatial reasoning"
authors = ["Lu Liu <nudtlliu@gmail.com>"]
readme = "README.md"
packages = [{include = "spacxt", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7"
numpy = "^1.24"
networkx = "^3.0"
openai = "^1.0"
python-dotenv = "^1.0"
shapely = "^2.0"
# Web backend dependencies
fastapi = {version = "^0.104.1", optional = true}
uvicorn = {version = "^0.24.0", optional = true}
websockets = {version = "^12.0", optional = true}
pydantic = {version = "^2.5.0", optional = true}
python-multipart = {version = "^0.0.6", optional = true}
aiofiles = {version = "^23.2.1", optional = true}

[tool.poetry.extras]
web = ["fastapi", "uvicorn", "websockets", "pydantic", "python-multipart", "aiofiles"]
all = ["fastapi", "uvicorn", "websockets", "pydantic", "python-multipart", "aiofiles"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
isort = "^5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
src_paths = ["src", "examples"]
